<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAD8D8"
    android:contentDescription="@string/viewallproducts"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#FAD8D8"
        tools:context=".AddProducts">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:clickable="true"
            android:contentDescription="@string/productImage"
            android:src="@drawable/baseline_camera_alt_24"
            app:backgroundTint="#F1E1EE"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.953"
            app:layout_constraintStart_toStartOf="@+id/imageView2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/berkshire_swash"
            android:text="@string/addproducts"
            android:textColor="#E83A99"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="1dp"
            android:hint="@string/productName"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColorHint="#E83A99"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="#E83A99"
            app:hintAnimationEnabled="true"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Body1"
            app:hintTextColor="#E83A99"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textColorHighlight="#E83A99" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="1dp"
            android:hint="@string/productDesc"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textAlignment="textStart"
            android:textColorHint="#E83A99"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="#E83A99"
            app:hintAnimationEnabled="true"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Body1"
            app:hintTextColor="#E83A99"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textColorHighlight="#E83A99" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="1dp"
            android:hint="@string/productPrice"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColorHint="#E83A99"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="#E83A99"
            app:hintAnimationEnabled="true"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Body1"
            app:hintTextColor="#E83A99"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:inputType="number|numberDecimal"
                android:textColorHighlight="#E83A99" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/addBtn"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="#E83A99"
            android:text="@string/add"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout3"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout3"
            app:layout_constraintTop_toBottomOf="@+id/floatingActionButton" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="202dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
            app:srcCompat="@drawable/defaultimageeee" />

        <TextView
            android:id="@+id/View4AllProducts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/viewallproducts"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/addBtn"
            app:layout_constraintStart_toStartOf="@+id/addBtn"
            app:layout_constraintTop_toBottomOf="@+id/addBtn" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>


